--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,72 @@
-/node_modules/
-/public/build/
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-.env
-
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+hide/.gitignore
+hide/package-lock.json
+hide/package.json
+hide/pnpm-lock.yaml
+hide/README.md
+hide/rollup.config.js
+hide/server.js
+hide/public/favicon.png
+hide/public/homepage.png
+hide/public/index.html
+hide/public/info.png
+hide/public/loader.gif
+hide/public/poll.png
+hide/public/pollError.png
+hide/public/style.css
+hide/public/svelte.svg
+hide/scripts/setupTypeScript.js
+hide/src/App.svelte
+hide/src/main.js
+hide/src/trash.txt
+hide/src/components/CreatePollForm.svelte
+hide/src/components/Footer.svelte
+hide/src/components/Header.svelte
+hide/src/components/index.js
+hide/src/components/Loader.svelte
+hide/src/components/Logo.svelte
+hide/src/components/PollDetails.svelte
+hide/src/components/PollList.svelte
+hide/src/components/ShareLink.svelte
+hide/src/components/ThemeSwitch.svelte
+hide/src/components/Veil.svelte
+hide/src/pages/Admin.svelte
+hide/src/pages/Help.svelte
+hide/src/pages/Home.svelte
+hide/src/pages/index.js
+hide/src/pages/NotFound.svelte
+hide/src/pages/Poll.svelte
+hide/src/pages/User.svelte
+hide/src/services/API.js
+hide/src/services/fingerprinting.js
+hide/src/services/pollService.js
+hide/src/shared/Button.svelte
+hide/src/shared/index.js
+hide/src/shared/Tabs.svelte
+hide/src/shared/TabsContent.svelte
+hide/src/shared/TabsHeader.svelte
+hide/src/store/pollstore.js
+.vscode/extensions.json
