--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
+  "name": "ninjapolls",
   "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public -s --no-clear"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^24.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.0",
-    "@rollup/plugin-replace": "^5.0.5",
-    "@rollup/plugin-terser": "^0.4.0",
-    "rollup": "^3.15.0",
-    "rollup-plugin-css-only": "^4.3.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.1.2",
-    "svelte": "^3.55.0"
-  },
-  "dependencies": {
+    "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "lucide-svelte": "^0.379.0",
-    "sirv-cli": "^2.0.0",
+    "postcss": "^8.4.38",
     "socket.io-client": "^4.7.5",
-    "svelte-routing": "^2.13.0"
+    "svelte": "^4.2.12",
+    "svelte-routing": "^2.13.0",
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "clsx": "^2.1.1",
+    "flowbite": "^2.3.0",
+    "flowbite-svelte": "^0.46.1",
+    "svelte-toasts": "^1.1.2",
+    "tailwind-merge": "^2.3.0"
   }
 }
