--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-API_BASE_URL=https://ninjapolls-api.onrender.com/api
-SOCKET_URL=https://ninjapolls-api.onrender.com
+PORT=6000
+API_BASE_URL=http://localhost:6000/api
+SOCKET_URL=http://localhost:6000
