--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "socket.io-client": "^4.7.5",
     "svelte": "^4.2.12",
     "svelte-routing": "^2.13.0",
+    "svelte-share-buttons-component": "^3.0.0",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   },
