--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "flowbite": "^2.3.0",
     "flowbite-svelte": "^0.46.1",
+    "svelte-navigation": "^0.2.0",
     "svelte-toasts": "^1.1.2",
     "tailwind-merge": "^2.3.0"
   }
