--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@vercel/analytics": "^1.3.1",
     "clsx": "^2.1.1",
     "flowbite": "^2.3.0",
     "flowbite-svelte": "^0.46.1",
