--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "@types/node": "^22.10.1",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "crypto": "^1.0.1",
